# sotn-player-mmx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  mmx.cmake  pl.ld  requirements.txt
.emu/: .gitignore
.github/workflows/: build.yml
assets/: .gitignore  LICENSE  heart.pal  hud.pal  mmx.pal  mmx1_boomerang_cutter.pal  mmx1_chameleon_sting.pal  mmx1_charge_lv1.pal  mmx1_charge_lv3.pal  mmx1_electric_spark.pal  mmx1_fire_wave.pal  mmx1_homing_torpedo.pal  mmx1_rolling_shield.pal  mmx1_shotgun_ice.pal  mmx1_storm_tornado.pal  pal.yaml  palettes.yaml  particles.pal  sprite_particles.yaml
assets/palettes/: heart_tank.pal  hud.pal  w_boomerang_cutter.pal  w_buster.pal  w_chameleon_sting.pal  w_electric_spark.pal  w_fire_wave.pal  w_homing_torpedo.pal  w_rolling_shield.pal  w_shotgun_ice.pal  w_storm_tornado.pal  x.pal  x_boomerang_cutter.pal  x_chameleon_sting.pal  x_charge1.pal  x_charge2.pal  x_electric_spark.pal  x_fire_wave.pal  x_homing_torpedo.pal  x_rolling_shield.pal  x_shotgun_ice.pal  x_storm_tornado.pal  zero.pal  zero_charge.pal
src/: .gitignore  1AC60.c  21250.c  24788.c  26C84.c  2A060.c  2C4C4.c  319C4.c  README.md  bss.c  d_18568.c  pl.c  pl.h  pl_anims.c  pl_assets.c  pl_entities.c  pl_header.c  pl_hud.c  pl_settings.c  spriteparts.c
src/lz4/: CHANGES  lz4.c  lz4.h
tools/: README.md  anim_editor.html  jascpal2c.py  lz4cmp.c  palette.py  png2raw.py  snespal2jascpal.py  sprite_packer.py  sprite_to_c.py  spritesheet.py  trim_sprite.py  utils.py
